Fixed mobile navbar overflow issue

--- a/client/src/components/Navbar/Navbar.scss
+++ b/client/src/components/Navbar/Navbar.scss
@@ -176,7 +176,7 @@ $transition-speed: 400ms;
           }
           svg {
             min-width: 0;
-            width: 1.9rem;
+            width: 1.5rem;
             margin: 0 1rem;
           }
         }
@@ -200,7 +200,7 @@ $transition-speed: 400ms;
           }
           svg {
             min-width: 0;
-            width: 1.9rem;
+            width: 1.5rem;
             margin: 0 1rem;
           }
         }
